[package]
name = "rustaga"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.0"
# bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_embedded_assets = "0.7.0"
# bevy_mod_debugdump = "0.7.0"
leafwing-input-manager = "0.9.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
